styles/header.module.scss
.logo {
    margin: 0 20px;
}

.navlink a {
    transition: color .15s ease-out 75ms;
}

.navlink a:hover {
    color: #1C86FF;
}

.nav {
    background: #1a1515;
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
}

.nav ul {
    display: flex;
    justify-content: space-between;
    list-style-type: none;
}

.nav li {
    display: inline-block;
    margin: 0 20px;
}

.nav a {
    text-decoration: none;
    color: white;
}

@media (width <= 800px) {

  .logo {
    display: none;
    margin: 0;
    padding: 0;
  }

  .nav ul {
    display: flex;
    justify-content: space-evenly;
    padding: 0 10px;
  }

  .nav li {
    margin: 0 5px;
  }
}

